--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,19 +21,25 @@
 					<tr>
 						<th scope="col">Short URL ID</th>
 						<th scope="col">Long URL</th>
+						<th scope="col">Edit</th>
 						<th scope="col">Delete</th>
 					</tr>
 				</thead>
 				<tbody>
 					<% for (let id in urls) { %>
 					<tr>
-						<form method="POST" action="/urls/9sm5xK/delete">
-							<td><%= id %></td>
-							<td><%= urls[id] %></td>
-							<td>
+						<td><%= id %></td>
+						<td><%= urls[id] %></td>
+						<td>
+							<form method="GET" action="/urls/<%= id %>">
+								<button type="submit" class="btn btn-primary">Edit</button>
+							</form>
+						</td>
+						<td>
+							<form method="POST" action="/urls/<%= id%>/delete">
 								<button type="submit" class="btn btn-primary">Delete</button>
-							</td>
-						</form>
+							</form>
+						</td>
 					</tr>
 					<% } %>
 				</tbody>
