--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,7 +15,7 @@
 				<h2 style="font-size: 2rem; font-weight: 500">Edit</h2>
 				<form class="form-inline" action="/urls/<%= id %>" method="POST">
 					<div class="form-group mb-2">
-						<label for="longURL">New URL:</label>
+						<label for="longURL">UPDATE URL:</label>
 						<input
 							class="form-control"
 							type="text"
