--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 	</head>
 	<body>
 		<%- include('partials/_header') %>
+		<h2>Login</h2>
 			<form action="/login" method="POST">
 				<label for="email">Email</label>
 				<input type="email" name="email" id="email" />
