--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,6 +3,7 @@
 	</head>
 	<body>
 		<%- include('partials/_header') %>
+		<h2>Register</h2>
 		<form action="/register" method="POST">
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email" />
